plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

// --- NEW springBoot CONFIGURATION BLOCK ---
// This explicitly tells the Spring Boot plugin what the main class is.
// It's a more direct configuration than modifying the bootJar task.
springBoot {
    mainClass = 'com.example.easytrade.TestApplication'
}
// --- END NEW BLOCK ---

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21 // Sticking with stable LTS Java 21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'org.glassfish:jakarta.json:2.0.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

// We removed the bootJar block and replaced it with the springBoot block above.

// This block remains to prevent the non-executable "-plain.jar".
jar {
    enabled = false
}

tasks.withType(JavaCompile) {
    options.compilerArgs = ['-parameters']
}

tasks.named('test') {
    useJUnitPlatform()
}
